# huggingface-datasets_CAMERA

./: CAMERA.py  README.md  pyproject.toml
.github/workflows/: push_to_hub.yaml
tests/: CAMERA_test.py
